it was added a second part of dz6

--- a/index.html
+++ b/index.html
@@ -9,7 +9,11 @@
 
 </head>
 <body>
-	<script src="js/index.js"></script>
-
+	<article>
+		<script src="js/index.js"></script>
+	</article>
+	<article>
+		<script src="js/removeElements.js"></script>
+	</article>
 </body>
 </html>
